# OmniVec

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  README.md  azure.yaml  binskim-result.sarif  codeql-csharp.sarif  codeql-python.sarif  deploy.sh  k8s-deploy.yaml  pytest.ini  security-report.html
agent/: Dockerfile  __init__.py  agent_loop.py  api.py  approvals.py  audit.py  auth.py  llm.py  requirements.txt  session_store.py
api/: Dockerfile  api.py  blob_backfill_worker.py  blob_controller.py  blob_enumerator.py  blob_live_worker.py  blob_watcher.py  checkpoint_manager.py  chunker.py  controller.py  cosmos_retry.py  cosmosdb_controller.py  health_checker.py  job_processor.py  keyvault_client.py  leader_election.py  models.py  postgres_worker.py  progress_tracker.py  requirements.txt  security_utils.py  sitecustomize.py  source_worker.py  store.py  telemetry.py  worker.py
cli/: client.go  cmd_admin.go  cmd_agent.go  cmd_assistant.go  cmd_auth.go  cmd_config.go  cmd_deployment.go  cmd_destination.go  cmd_job.go  cmd_metrics.go  cmd_model.go  cmd_pipeline.go  cmd_search.go  cmd_settings.go  cmd_source.go  cmd_status.go  cmd_transform.go  config.go  go.mod  go.sum  main.go  output.go
docgrok/: Dockerfile  OPERATIONS.md  README.md  admin.py  api.py  deploy.sh  envelope_crypto.py  model_store.py  pipelines.py  requirements.txt
docgrok/router/: Cargo.toml  Dockerfile
docgrok/router/.cargo/: config.toml
docgrok/router/bench/: Cargo.toml  Dockerfile
docgrok/router/bench/src/: main.rs
docgrok/router/k8s/: deployment.yaml
docgrok/router/src/: main.rs
docs/: agent.md  architecture-review.md  architecture-v2.md  architecture.md  cli-guide.md  e2e-guide.md  (+5 more)
scripts/bench_embedding_rs/: Cargo.toml
scripts/bench_embedding_rs/src/: main.rs
(+250 files in other folders)
