[package]
name = "docgrok-router"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kube = { version = "0.98", features = ["runtime", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = "line-tables-only"
